--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "start": "brunch watch --server",
     "build": "brunch build --production"
   },
-  "dependencies": {},
+  "dependencies": {
+    "nunjucks-brunch": "^0.3.3"
+  },
   "devDependencies": {
     "auto-reload-brunch": "^2.7.1",
     "babel-brunch": "~6.0",
